--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
                 -DCMAKE_BUILD_TYPE=Release `
                 -DCMAKE_INSTALL_PREFIX=install `
                 -DBUILD_SHARED_LIBS=ON `
-                -DBUILD_EXAMPLES=ON `
+                -DBUILD_EXAMPLES=OFF `
                 -DBUILD_opencv_world=ON `
                 -DCPU_DISPATCH="" `
                 -DWITH_OPENGL=ON `
