Replace GITHUB_TOKEN with CUSTOM_GITHUB_TOKEN

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,13 +93,13 @@ jobs:
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
 
       - name: Upload to Release
         if: steps.check_release.outputs.skip == 'false'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: build_opencv/opencv-mingw.zip
