--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: write
-      actions: read
+      actions: write
 
     steps:
       - name: Checkout
